--- a/MVCTravelBookingISE/Views/Booking/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Booking/Index.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Index">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Booking_ID" class="control-label"></label>
-                <input asp-for="Booking_ID" class="form-control" />
-                <span asp-validation-for="Booking_ID" class="text-danger"></span>
+                <label asp-for="Booking_Id" class="control-label"></label>
+                <input asp-for="Booking_Id" class="form-control" />
+                <span asp-validation-for="Booking_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Booking_Name" class="control-label"></label>
@@ -28,19 +28,19 @@
                 <span asp-validation-for="Booking_date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Flight_ID" class="control-label"></label>
-                <input asp-for="Flight_ID" class="form-control" />
-                <span asp-validation-for="Flight_ID" class="text-danger"></span>
+                <label asp-for="Flight_Id" class="control-label"></label>
+                <input asp-for="Flight_Id" class="form-control" />
+                <span asp-validation-for="Flight_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Acco_ID" class="control-label"></label>
-                <input asp-for="Acco_ID" class="form-control" />
-                <span asp-validation-for="Acco_ID" class="text-danger"></span>
+                <label asp-for="Acco_Id" class="control-label"></label>
+                <input asp-for="Acco_Id" class="form-control" />
+                <span asp-validation-for="Acco_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Traveller_ID" class="control-label"></label>
-                <input asp-for="Traveller_ID" class="form-control" />
-                <span asp-validation-for="Traveller_ID" class="text-danger"></span>
+                <label asp-for="Traveller_Id" class="control-label"></label>
+                <input asp-for="Traveller_Id" class="form-control" />
+                <span asp-validation-for="Traveller_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
