--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<MVCTravelBookingISE.Models.FlightModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "View All the Flights";
 }
 
 <h1>Index</h1>
@@ -24,9 +24,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Flight_Class)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Flight_Rules_Id)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -45,13 +43,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Flight_Class)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Flight_Rules_Id)
-            </td>
+           
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Flight_Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Flight_Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Flight_Id">Delete</a>
+            </td>
+            <td class="align-middle">
+               <a class="btn btn-outline-primary"><i class="bi bi-pencil-sqaure"></i>Edit</a>
             </td>
         </tr>
 }
