--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>View all flights</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -24,10 +24,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.Flight_Class)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Flight_Rules_Id)
-            </th>
-            <th></th>
+           
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -45,14 +43,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Flight_Class)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Flight_Rules_Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Flight_Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Flight_Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Flight_Id">Delete</a>
-            </td>
+           
         </tr>
 }
     </tbody>
