--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MVCTravelBookingISE</title>
+    <title>@ViewData["Title"] - Unlimited Travels</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/MVCTravelBookingISE.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MVCTravelBookingISE</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Unlimited Travels</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,15 +20,35 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <li class="navbar-nav flex-grow-1">
+                            <a class="nav-link text-dark" asp.controller="FlightModelsController" asp-action="Index"> <i class=""></i></a>
+
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="button" aria-haspopup="true" aria-expanded="false">
+                                <i class="bi-film-gear"></i> Management
+
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropDown">
+                                <a class="dropdown-item" asp-controller="FlightModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Flights</a>
+                                <a class="dropdown-item" asp-controller="AccomodationModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Accomodation</a>
+                                <a class="dropdown-item" asp-controller="BookingModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Booking</a>
+                                <a class="dropdown-item" asp-controller="TransportModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Transportation</a>
+
+
+                            </div>
                         </li>
+                       
                     </ul>
+                    <form class="form-check-inline my-2 my-lg-0border-0"  asp-controller="FlightModelsController" asp-action="Filter"  style="padding-right:25px;"> 
+                        <input name="searchString" type="text" class="form-control" placeholder="Search for a flight..." />
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+
+                    </form> 
                 </div>
             </div>
         </nav>
+     
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -38,8 +58,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - MVCTravelBookingISE - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+            &copy; 2022 - Unlimited Travels
+         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
