--- a/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.Acco_Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Traveller_Id)
+            @Html.DisplayNameFor(model => model.Transport_Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Traveller_Id)
+            @Html.DisplayFor(model => model.Transport_Id)
         </dd>
     </dl>
 </div>
