--- a/MVCTravelBookingISE/Views/BookingModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Create.cshtml
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Acco_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Traveller_Id" class="control-label"></label>
-                <input asp-for="Traveller_Id" class="form-control" />
-                <span asp-validation-for="Traveller_Id" class="text-danger"></span>
+                <label asp-for="Transport_Id" class="control-label"></label>
+                <input asp-for="Transport_Id" class="form-control" />
+                <span asp-validation-for="Transport_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
