--- a/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Acco_Id)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Traveller_Id)
+                @Html.DisplayNameFor(model => model.Transport_Id)
             </th>
             <th></th>
         </tr>
@@ -46,7 +46,7 @@
                 @Html.DisplayFor(modelItem => item.Acco_Id)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Traveller_Id)
+                @Html.DisplayFor(modelItem => item.Transport_Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Booking_Id">Edit</a> |
