--- a/MVCTravelBookingISE/wwwroot/css/site.css
+++ b/MVCTravelBookingISE/wwwroot/css/site.css
@@ -23,3 +23,19 @@ header {
    font-weight:bolder;
    height:100px;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
+    color: #322429;
+    font-weight: 500;
+}
+.nav-item{
+    margin-left:500px;
+}
+h1 {
+    font-size: 50px;
+}
