--- a/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
@@ -49,7 +49,16 @@
             </div>
             <div class="form-group">
                 <label asp-for="Acco_Price" class="control-label"></label>
-                <input asp-for="Acco_Price" class="form-control" />
+                <div class="input-group mb-3">
+                    <span class="input-group-text">
+                      R
+                    </span> 
+                    
+                    <input asp-for="Acco_Price" class="form-control" />
+                    <span class="input-group-text">.00</span>
+                </div>
+               
+               
                 <span asp-validation-for="Acco_Price" class="text-danger"></span>
             </div>
             <div class="form-group">
