--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<MVCTravelBookingISE.Models.AccomodationModel>
+@*<link rel="stylesheet" href="~/css/FlightHome.css" />*@
 
 @{
     ViewData["Title"] = "Index";
@@ -11,7 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 section-intro text-center">
-                <h1>List of Accomodations</h1>
+                <h1>Find Cheap acccomodation-many deals to choose form! </h1>
                 <p>The destination, ratings and price of accomodation is listed below</p>
                 <div class="divider">
                 </div>
@@ -25,9 +26,83 @@
 <p>
     <a asp-action="Create">List your property</a>
 </p>
+    <div class="card ">
+    <div class="card-body ">
+            <h5 class="card-title">
+                Locations
+            </h5>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="mb-2">
+                        <label id="origin-label" for="origin-input" class="form-label text-black">
+                            Origin
+                        </label>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi-pin-map"></i>Destination 📍</span>
+                            <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="location" aria-describedby="origin-label" />
+                            <datalist id="origin-options"></datalist>
+                        </div>
+                    </div>
+                </div>
+             <div class="col-sm">
+                <div id="departure-date" class="mb-1">
+                    <label id="departure-date-label" for="departure-date-input" class="form-label">Check-in date</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="bi-calendar"></i></span>
+                        <input type="date"
+                               class="form-control"
+                               id="departure-date-input"
+                               aria-describedby="departure-date-label" />
+                    </div>
+                </div>
+                <div id="return-date" class="mb-2">
+                    <label id="return-date-label" for="return-date-input" class="form-label">Return date</label>
+                    <div class="input-group">
+                        <span class="input-group-text"><i class="bi-calendar-fill"></i> </span>
+                        <input type="date"
+                               class="form-control"
+                               id="return-date-input"
+                               aria-describedby="return-date-label" />
+                    </div>
+                </div>
+                <label class="form-label">Bathrooms</label>
+                <div class="mb-2">
+                    <div class="input-group">
+                        <label for="adults-input" class="input-group-text">Bathrooms</label>
+                        <input type="number"
+                               min="0"
+                               class="form-control"
+                               id="adults-input"
+                               aria-describedby="adults-label" />
+                    </div>
+               
+                </div>
+                <label class="form-label">rooms</label>
+                <div class="mb-2">
+                    <div class="input-group">
+                        <label for="adults-input" class="input-group-text">rooms</label>
+                        <input type="number"
+                               min="0"
+                               class="form-control"
+                               id="adults-input"
+                               aria-describedby="adults-label" />
+                    </div>
+                  
+                </div>
 
+             </div>
+           
+            </div>
+    </div>
+  </div>
 
+  <div class="row">
+      <div class="col-2">
+          <div class="card mb-3">
 
+          </div>
+      </div>
+  </div>
 <div class="row">
     @foreach (var item in Model) {
 
