--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -28,7 +28,7 @@
 
     <div class="alert alert-dismissible alert-info">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        <strong>Cheap and affordable Flights</strong> Ratings on Flights<a href="#" class="alert-link"> Search Now</a>.
+        <strong>Cheap and affordable Flights</strong> and check out the Flight Rules<a href="FlightRulesModels/Index" class="alert-link"> Check Now!</a>.
     </div>
 
 
