--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="FlightModels" asp-action="Index">
-                    <img src="img/Travel App or Website Logo.png" width="85" height="85"/>UNLIMITED TRAVELS</a>
+                    <img src="img/Travel App or Website Logo.png" width="75" height="75"/>UNLIMITED TRAVELS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
                                 <a class="dropdown-item" asp-controller="TransportModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Transportation</a>
                                 
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
+                                <a class="dropdown-item" href="#">POLICY</a>
                             </div>
                         </li>
                        
