--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model MVCTravelBookingISE.Models.AccomodationModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Update Accomodation";
 }
 
 <h1>Edit</h1>
@@ -54,7 +54,7 @@
                 <span asp-validation-for="Acco_Price" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-primary" />
             </div>
         </form>
     </div>
