--- a/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model MVCTravelBookingISE.Models.AccomodationModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Accomodation";
 }
 
-<h1>Delete</h1>
+<h1>Delete Accomodation</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete @Model.Acco_Name ?</h3>
 <div>
     <h4>AccomodationModel</h4>
     <hr />
@@ -63,7 +63,9 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Acco_Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Confirm" class="btn btn-danger float-right" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+  
+    <a class="btn btn-outline-secondary" asp-action="btn btn-outline-secondary" asp-action="Index">Show all</a>
 </div>
