--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,63 +1,114 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
-    Layout = "~/Areas/Identity/Pages/_AuthLayout.cshtml";
+  
+  
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-6">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-          
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" />
-                        <label asp-for="Input.FirstName"></label>
-                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="Input.LastName" class="form-control" autocomplete="username" aria-required="true" />
-                        <label asp-for="Input.LastName"></label>
-                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
+<!-- Section: Design Block -->
+<section class="">  
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+             <div class="container">
+                <div class="row gx-lg-5 align-items-center">
+                    <div class="col-lg-6 mb-5 mb-lg-0">
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                        <label asp-for="Input.Password"></label>
-                        <span asp-validation-for="Input.Password" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                        <label asp-for="Input.ConfirmPassword"></label>
-                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            
-         
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-   
-</div>
+                        <h1 class="my-5 display-3 fw-bold ls-tight">
+                            The best and easy <br />
+                            <span class="text-primary">flights</span>
+                        </h1>
+                        <p style="color: hsl(217, 10%, 50.8%)">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Eveniet, itaque accusantium odio, soluta, corrupti aliquam
+                            quibusdam tempora at cupiditate quis eum maiores libero
+                            veritatis? Dicta facilis sint aliquid ipsum atque?
+                        </p>
+                     </div>
+                     <div class="col-lg-6 mb-5 mb-lg-0">
+                                 <div class="card">
+                                   <div class="card-body py-5 px-md-5">
+                                     <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+                                       <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                                          <div class="row">
+                                                <div class="col-md-6 mb-4">
+                                                    <div class="form-outline">
+                                                        <input asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" />
+                                                        <label asp-for="Input.FirstName"></label>
+                                                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+                                                    </div>
 
+                                                </div>
+
+                                                    <div class="col-md-6 mb-4">
+
+                                                        <div class="form-outline">
+                                                            <input asp-for="Input.LastName" class="form-control" autocomplete="username" aria-required="true" />
+                                                            <label asp-for="Input.LastName"></label>
+                                                            <span asp-validation-for="Input.LastName" class="text-danger"></span>
+                                                        </div>
+                                                    </div>
+
+                                           </div>
+
+                                                    <div class="form-outline mb-4">
+                                                       
+                                                            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                                                            <label asp-for="Input.Email"></label>
+                                                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                                     </div>
+                                                    <div class="form-outline mb-4">
+                                                        <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                                                        <label asp-for="Input.Password"></label>
+                                                        <span asp-validation-for="Input.Password" class="text-danger"></span>
+                                                    </div>
+                                                    <div class="form-outline mb-4">
+                                                        <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                                                        <label asp-for="Input.ConfirmPassword"></label>
+                                                        <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                                                    </div>
+                                                    <!-- Checkbox -->
+                                                    <div class="form-check d-flex justify-content-center mb-4">
+                                                        <label class="form-check-label" for="form2Example33">
+                                                            Subscribe to our newsletter
+                                                        </label>
+                                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                                                      
+                                                    </div>
+                                                <button id="registerSubmit" type="submit" class="btn btn-primary btn-block mb-4">Register</button>
+                                              
+                                                <!-- Register buttons -->
+                                                <div class="text-center">
+                                                    <p>or sign up with:</p>
+                                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                                        <i class="fab fa-facebook-f"></i>
+                                                    </button>
+
+                                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                                        <i class="fab fa-google"></i>
+                                                    </button>
+
+                                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                                        <i class="fab fa-twitter"></i>
+                                                    </button>
+
+                                                    <button type="button" class="btn btn-link btn-floating mx-1">
+                                                        <i class="fab fa-github"></i>
+                                                    </button>
+                                                 </div>
+
+                                      </form>
+                                   </div>
+
+                                 </div>
+                             </div>
+                 </div>
+             </div>
+
+       </div>
+
+</section>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
