--- a/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
@@ -35,10 +35,10 @@
             @Html.DisplayFor(model => model.Flight_Class)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Rules_Id)
+            @Html.DisplayNameFor(model => model.FlightRules_Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Rules_Id)
+            @Html.DisplayFor(model => model.FlightRules_Id)
         </dd>
     </dl>
 </div>
