--- a/MVCTravelBookingISE/Views/FlightModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Delete.cshtml
@@ -35,12 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Flight_Class)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Rules_Id)
+      @*  <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FlightRules_Id)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Rules_Id)
-        </dd>
+            @Html.DisplayFor(model => model.FlightRules_Id)
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
