--- a/MVCTravelBookingISE/Views/FlightModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Edit.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="Flight_Class" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Flight_Rules_Id" class="control-label"></label>
-                <input asp-for="Flight_Rules_Id" class="form-control" />
-                <span asp-validation-for="Flight_Rules_Id" class="text-danger"></span>
+                <label asp-for="FlightRules_Id" class="control-label"></label>
+                <input asp-for="FlightRules_Id" class="form-control" />
+                <span asp-validation-for="FlightRules_Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
