--- a/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Details.cshtml
@@ -35,14 +35,14 @@
             @Html.DisplayFor(model => model.Flight_Class)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FlightRules_Id)
+            @Html.DisplayNameFor(model => model.Flight_Price)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FlightRules_Id)
+            @Html.DisplayFor(model => model.Flight_Price)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Flight_Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-dark"  asp-action="Edit" asp-route-id="@Model?.Flight_Id">Edit</a> |
+    <a class="btn btn-info" asp-action="Index">Back to List</a>
 </div>
