--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -48,10 +48,11 @@
                 <input asp-for="Acco_Type" class="form-control" />
                 <span asp-validation-for="Acco_Type" class="text-danger"></span>
             </div>
-            <div class="form-group">
+          
+            <div class="input-group mb-3">
                 <label asp-for="Acco_Price" class="control-label"></label>
-                <input asp-for="Acco_Price" class="form-control" />
-                <span asp-validation-for="Acco_Price" class="text-danger"></span>
+                <input asp-for="Acco_Price" class="form-control" aria-label="Amount (to the nearest dollar)" />
+                <span asp-validation-for="Acco_Price" class="text-danger input-group-text">.00</span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Update" class="btn btn-primary" />
