--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -4,29 +4,34 @@
 @{
     ViewData["Title"] = "Index";
 }
-<div class="alert alert-dismissible alert-info">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    <strong>Cheap and affordable Flights</strong> Ratings on Flights<a href="#" class="alert-link"> Search Now</a>.
-</div>
-<section id="services">
-    <div class="container">
+<head>
+    <script></script>
+</head>
+<body>
+
+    <section id="services " class="view w-100  text-white" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80'); background-repeat:no-repeat; background-size:cover; background-position: center center;">
+      <div class="mask rgba-black-light align-items-center">
+        <div class="container">
         <div class="row">
-            <div class="col-12 section-intro text-center">
-                <h1>Find Cheap acccomodation-many deals to choose form! </h1>
-                <p>The destination, ratings and price of accomodation is listed below</p>
-                <div class="divider">
-                </div>
+            <div class="col-12 mb-4 text-white text-center">
+                        <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" data-wow-delay="0.3s" >Find Cheap acccomodation-many deals to choose form! </h1>
+                        <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
+                        <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s" ></h5>
+                            The destination, ratings and price of accomodation is listed below</p>
+                        <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">portfolio</a>
+                        <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">About me</a>
+
             </div>
         </div>
     </div>
+    </div>
     </section>
-
-
+  
 
 <p>
-    <a asp-action="Create">List your property</a>
+    <a  class="btn btn-primary text-white" asp-action="Create">List your property</a>
 </p>
-    <div class="card ">
+    <div class="card border-5 border-info ">
     <div class="card-body ">
             <h5 class="card-title">
                 Locations
@@ -45,7 +50,7 @@
                     </div>
                 </div>
              <div class="col-sm">
-                <div id="departure-date" class="mb-1">
+               @* <div id="departure-date" class="mb-1">
                     <label id="departure-date-label" for="departure-date-input" class="form-label">Check-in date</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi-calendar"></i></span>
@@ -54,8 +59,9 @@
                                id="departure-date-input"
                                aria-describedby="departure-date-label" />
                     </div>
-                </div>
-                <div id="return-date" class="mb-2">
+                </div>*@
+                
+               @* <div id="return-date" class="mb-2">
                     <label id="return-date-label" for="return-date-input" class="form-label">Return date</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi-calendar-fill"></i> </span>
@@ -64,7 +70,7 @@
                                id="return-date-input"
                                aria-describedby="return-date-label" />
                     </div>
-                </div>
+                </div>*@
                 <label class="form-label">Bathrooms</label>
                 <div class="mb-2">
                     <div class="input-group">
@@ -77,6 +83,8 @@
                     </div>
                
                 </div>
+                </div>
+                <div class="col-sm">
                 <label class="form-label">rooms</label>
                 <div class="mb-2">
                     <div class="input-group">
@@ -109,7 +117,7 @@
         <div class="col-md-4 col-xs-6 border-primary mb-3">
             <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
-                    <div class="col-md-12">
+                    <div class="col-md-12 bg-transparent">
                         <div class="card-header text-white bg-transparent">
                             <p class="card-text">
                                 <h5 class="card-title">
@@ -123,9 +131,9 @@
                         </div>
                     </div>
                        <div class="col-md-12">
-                        <div class="card-header text-white bg-transparent">
-                            <img class="img-thumbnail" style="max-width:150px"     src="@item.Acco_picture" alt="@item.Acco_Name">
-                    </div>
+                     
+                            <img class="img-rounded" style="max-width:250px"     src="@item.Acco_picture" alt="@item.Acco_Name">
+                  
                     </div>
                 
                 
@@ -157,7 +165,7 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Acco_Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
-                                <a class="btn btn-success text-white>
+                                <a class="btn btn-success text-white" data-toggle="popover"
                                asp-controller="Orders"
                                asp-action="AddItemToBooking"
                                asp-route-id="@item.Acco_Id">
@@ -236,3 +244,5 @@
 }
     </tbody>
 </table>*@
+<script src="~/js/site.js"></script>
+</body>
