--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVCTravelBookingISE.Models.AccomodationModel
+﻿@model AccomodationModel
 
 @{
     ViewData["Title"] = "Update Accomodation";
