--- a/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
@@ -43,6 +43,16 @@
                 <span asp-validation-for="Acco_Rate" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Acco_Rules" class="control-label"></label>
+                <input asp-for="Acco_Rules" class="form-control" />
+                <span asp-validation-for="Acco_Rules" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Acco_picture" class="control-label"></label>
+                <input asp-for="Acco_picture" class="form-control" />
+                <span asp-validation-for="Acco_picture" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Acco_Type" class="control-label"></label>
                 <input asp-for="Acco_Type" class="form-control" />
                 <span asp-validation-for="Acco_Type" class="text-danger"></span>
