--- a/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
+++ b/MVCTravelBookingISE/Views/Shared/_Layout.cshtml
@@ -11,18 +11,25 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow">
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow" >
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="FlightModels" asp-action="Index">
-                    <img src=@Url.Content("~/img/Travel App or Website Logo.png") width="65" height="75"/>UNLIMITED TRAVELS</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <img src="@Url.Content("~/img/Travel App or Website Logo.png")" width="65" height="65" />UNLIMITED TRAVELS
+                </a>
+                <button class="navbar-toggler"
+                        type="button"
+                        data-mdb-toggle="collapse"
+                        data-mdb-target="#navbarExample01"
+                        aria-controls="navbarExample01"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
                 </button>
-                <div class="navbar-collapse collapse id=navbarColor01">
-                   
+                <div class="collapse navbar-collapse" id="navbarExample01">
+
                     <ul class="navbar-nav me-auto">
-                      
+
                         <li class="nav-item">
                             <a class="nav-link" href="#">About</a>
                         </li>
@@ -36,7 +43,7 @@
                                 <a class="dropdown-item" asp-controller="AccomodationModels" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Accomodation</a>
                                 <a class="dropdown-item" asp-controller="BookingModels" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Booking</a>
                                 <a class="dropdown-item" asp-controller="TransportModel" asp-action="Index"><i tabindex=" bi-camera-reels"></i>Transportation</a>
-                                
+
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">POLICY</a>
                             </div>
@@ -45,11 +52,37 @@
                             <a class="nav-link text-dark" asp.controller="FlightModelsController" asp-action="Index"> <i class="badge-info bi-film"></i></a>
 
                         </li>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" asp-controller="AccomodationModels" asp-action="Create" ><i class="bi bi-search"></i>LIST YOUR PROPERTY</button>
-                       
-                       
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" asp-controller="AccomodationModels" asp-action="Create"><i class="bi bi-search"></i>LIST YOUR PROPERTY</button>
+
+                        <form class="d-flex">
+                            <input class="form-control me-sm-2" type="text" placeholder="Search">
+                            <button class="btn btn-outline-secondary my-2 my-sm-0 glyphicon glyphicon-search" type="submit">Search</button>
+                        </form>
+                        <partial name="_LoginPartial.cshtml" />
+
                     </ul>
-                    
+
+                </div>
+            </div>
+        </nav>
+        <!-- Navbar -->
+        <!-- Jumbotron -->
+        <div class=" mask p-5 text-center bg-image" style="background-color: gray; background-image:url('https://images.unsplash.com/photo-1521673252667-e05da380b252?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80'); background-position:center; background-repeat:no-repeat; background-size:cover; height:300px;">
+            <h1 class="mb-3 text-white">Unlimited travels</h1>
+         
+        </div>
+        <!-- Jumbotron -->
+    </header>
+   @* <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom box-shadow">
+            <div class="container-fluid">
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse id=navbarColor01">
+                   
                   
                     <form class="d-flex">
                         <input class="form-control me-sm-2" type="text" placeholder="Search">
@@ -64,7 +97,7 @@
         </nav>
      
     </header>
-
+*@
 
     <div class="container">
         <main role="main" class="pb-3">
